SSE is working. There is a continuous stream on route /scraper/stream, that constantly shows new data, as the cron restarts the scraper

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,7 +7,7 @@
             eventSource.onmessage = (data) => {
                 console.log('New data')
                 const newData = document.createElement('li')
-                newData.innerText = data
+                newData.innerText = data.data
                 document.body.appendChild(newData)
             }
         </script>
