--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,6 +2,18 @@
 <html>
     <body>
         <script>
+            const token = fetch('http://localhost:3000/auth/login', {
+                method: "POST",
+                body: JSON.stringify({
+                    "username": "admin",
+                    "password": "admin"
+                })
+            }).then((response) => response.json())
+            .then((data) => console.log(data))
+            .catch((err) => {
+                console.log(err);
+            });
+
             const eventSource = new EventSource('http://localhost:3000/scraper/stream');
             console.log("Connected")
             eventSource.onmessage = (data) => {
