--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,10 +4,7 @@
         <script>
             const token = fetch('http://localhost:3000/auth/login', {
                 method: "POST",
-                body: JSON.stringify({
-                    "username": "admin",
-                    "password": "admin"
-                })
+                    body: "{'username': 'admin','password': 'admin'}"
             }).then((response) => response.json())
             .then((data) => console.log(data))
             .catch((err) => {
